deployment/vod-backend/api-app/api/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api
  namespace: vod-backend
  labels:
    app: api
    app.kubernetes.io/instance: api
    app.kubernetes.io/component: api
    app.kubernetes.io/name: api
    app.openshift.io/runtime: python
    app.kubernetes.io/part-of: api-app
    app.openshift.io/runtime-version: 3.9-ubi8
  defaultAnnotations:
    app.openshift.io/vcs-uri: https://github.com/nutanixdev/modern-app-demo.git
    app.openshift.io/vcs-ref: ''
spec:
  to:
    kind: Service
    name: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    caCertificate: ''
    certificate: ''
    destinationCACertificate: ''
    key: ''
  host: ''
  path: ''
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
